[REFACTOR] make some changes for getByTalentId in exp service to handle code maintainability